# RoboNix-Speculative-Decoding-Toolkit

./: .gitignore  CITATION.cff  CONTRIBUTORS.md  NEWS.md  README-CN.md  README.md  TODO.md  __init__.py  pyproject.toml  requirements.txt  service_bootstrap.py
benchmarks/libero/experiments/: libero_utils.py  run_libero_eval.py  run_libero_goal_Spec.py
benchmarks/libero/test-speed/: test_speculation_goal.sh
configs/: .env.example  README.md  llama_2_chat_7B_config.json
docs/assets/: IMAGEGEN_PROMPTS.md
modules/: __init__.py  _registry.py
modules/acceptance/: __init__.py
modules/candidate_generation/: __init__.py
modules/drafter/: __init__.py
modules/strategies/: __init__.py  modeling_speculation.py  modeling_speculation_1.py  modeling_speculation_14.py  modeling_speculation_7d.py  modeling_speculation_jiou.py  modeling_speculation_yuzhi.py
modules/training/: __init__.py
modules/verification/: __init__.py
requirements/: requirements-min.txt
scripts/: __init__.py  run.py
scripts/evaluate/: debug-decode.py
scripts/train/: ds_config.json  train_deepspeed_libero_goal.py  train_ds_libero_goal.sh
tests/: test_layout.py  test_lazy_catalogs.py
utils/: __init__.py
utils/common/: __init__.py
utils/kv_cache/: __init__.py
utils/model_loading/: __init__.py
